--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -226,4 +226,8 @@
     <!-- Workaround for devices with broken keyboards -->
     <bool name="config_forceDisableHardwareKeyboard">true</bool>
 
+    <!-- True if the Irda service should be started at system start. This currently only
+         supports Samsung Galaxy S4. -->
+    <bool name="config_enableIrdaManagerService">true</bool>
+
 </resources>
